owners api endpoints
